updated index.html with the necessary changes for the wireframe

--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tristan's Site</title>
+  <meta charset="UTF-8" />
+  <title>Gaming Hub</title>
 </head>
 <body>
-    <div id="something">
-        
+
+  <!-- Header -->
+  <header>
+    <div class="logo-area">
+      <img src="images/logo.png" alt="Gaming Hub logo" />
+      <h1>Gaming Hub</h1>
     </div>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#game-library">Game Library</a></li>
+        <li><a href="#faq">FAQ</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main id="home">
+    <h2>Welcome to Gaming Hub</h2>
+
+    <!-- Browse Games Section -->
+    <section id="browse-games">
+      <div class="text-block">
+        <h3>Find the right multiplayer game for your group</h3>
+        <a href="#game-library" class="btn">Browse games</a>
+      </div>
+      <div class="image-block">
+        <img src="images/pc-gaming-group.jpg" alt="Friends playing games on computers" />
+      </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq">
+      <div class="image-block">
+        <img src="images/mobile-gaming-group.jpg" alt="Friends playing games on handheld devices" />
+      </div>
+      <div class="text-block">
+        <h3>Have questions about playing or setting up multiplayer?</h3>
+        <p>Check out our FAQ here:</p>
+        <a href="#faq-page" class="btn btn-faq">FAQ</a>
+      </div>
+    </section>
+  </main>
+
+  <!-- Game Library Placeholder -->
+  <section id="game-library">
+    <h2>Game Library</h2>
+    <!-- Content for game library will go here -->
+  </section>
+
+  <!-- FAQ Page Placeholder -->
+  <section id="faq-page">
+    <h2>FAQ</h2>
+    <!-- FAQ content will go here -->
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Gaming Hub</p>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#top">Back to Top</a></li>
+      </ul>
+    </nav>
+  </footer>
+
 </body>
 </html>
