added the stylesheet

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Gaming Hub</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <!-- Header -->
   <header>
     <div class="logo-area">
-      <img src="images/logo.png" alt="Gaming Hub logo" />
+      <img src="../images/logo.png" alt="Gaming Hub logo" />
       <h1>Gaming Hub</h1>
     </div>
     <nav>
@@ -32,14 +33,14 @@
         <a href="#game-library" class="btn">Browse games</a>
       </div>
       <div class="image-block">
-        <img src="images/pc-gaming-group.jpg" alt="Friends playing games on computers" />
+        <img src="../images/gamingcafe.jpg" alt="Friends playing games on computers" />
       </div>
     </section>
 
     <!-- FAQ Section -->
     <section id="faq">
       <div class="image-block">
-        <img src="images/mobile-gaming-group.jpg" alt="Friends playing games on handheld devices" />
+        <img src="../images/onphone.jpg" alt="Friends playing games on handheld devices" />
       </div>
       <div class="text-block">
         <h3>Have questions about playing or setting up multiplayer?</h3>
@@ -66,8 +67,9 @@
     <p>© 2025 Gaming Hub</p>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#top">Back to Top</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gamelibrary.html">Game Library</a></li>
+        <li><a href="index.html">Back to Top</a></li>
       </ul>
     </nav>
   </footer>
