updated index file to incorporate faq.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="text-block">
         <h3>Have questions about playing or setting up multiplayer?</h3>
         <p>Check out our FAQ here:</p>
-        <a href="#faq-page" class="btn btn-faq">FAQ</a>
+        <a href="faq.html" class="btn btn-faq">FAQ</a>
       </div>
     </section>
   </main>
@@ -56,12 +56,6 @@
     <!-- Content for game library will go here -->
   </section>
 
-  <!-- FAQ Page Placeholder -->
-  <section id="faq-page">
-    <h2>FAQ</h2>
-    <!-- FAQ content will go here -->
-  </section>
-
   <!-- Footer -->
   <footer>
     <p>© 2025 Gaming Hub</p>
@@ -69,6 +63,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="gamelibrary.html">Game Library</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="index.html">Back to Top</a></li>
       </ul>
     </nav>
